<resources>
    <string name="app_name">PlanRadar Assessment</string>
    <string name="action_settings">Settings</string>

    <string name="loading">Loading…</string>
    <string name="connection_error">Connection Error!</string>
    <string name="generic_error">An error has occurred!</string>
    <string name="cities_fragment_title">Cities</string>
    <string name="add_city">Add city</string>
    <string name="error_no_cities_added">No cities added yet!</string>
    <string name="error_failed_setup_app">Failed to setup app data!</string>
    <string name="home_fragment_label">Home Fragment</string>
    <string name="add_city_dialog_label">Add City</string>
    <string name="description">Description</string>
    <string name="temperature">Temperature</string>
    <string name="humidity">Humidity</string>
    <string name="windspeed">Windspeed</string>
    <string name="weather_location_date">Weather information for %1$s received on \n %2$s</string>
    <string name="temperature_value">%1$s° C</string>
    <string name="windspeed_value">%1$s km/h</string>
    <string name="city_name_history">%1$s historical</string>
    <string name="weather_details_fragment_label">Weather Details Fragment</string>
    <string name="error_no_historical_data">No historical data for this city!</string>
    <string name="weather_history_fragment_label">Weather History Fragment</string>
    <string name="add_new_city">Add new city</string>
    <string name="please_add_city">Please add city first</string>
    <string name="city_not_found">City not found!</string>
    <string name="city_added">City added Successfully</string>
    <string name="delete_city">Delete city!</string>
    <string name="delete_city_dialog_description">Are you sure you want to delete %1$s from cities list?</string>
    <string name="connect_internet">Make sure to connect to the internet</string>

</resources>