<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:orientation="vertical"
    android:background="@color/black"
  >

  <LinearLayout

    android:id="@+id/layoutToolBar"
    android:layout_width="match_parent"
    android:layout_height="@dimen/_120sdp"
    android:background="@color/primary_color"
    android:elevation="@dimen/_24sdp"
    android:gravity="bottom"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    >

    <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="@dimen/_42sdp"
      android:layout_marginBottom="@dimen/_10sdp"
      android:fontFamily="@font/roboto_regular"
      android:text="@string/cities_fragment_title"
      android:textColor="@color/white"
      android:textSize="24sp"
      />

  </LinearLayout>

  <FrameLayout
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="1"
    android:background="@drawable/gradient_background"
    app:layout_constraintTop_toBottomOf="@+id/layoutToolBar"
    >

    <ImageView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_gravity="bottom"
      android:contentDescription="@null"
      android:scaleType="centerCrop"
      android:src="@drawable/group"
      />

    <androidx.recyclerview.widget.RecyclerView
      android:id="@+id/rvCities"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      app:layoutManager="LinearLayoutManager"
      tools:itemCount="3"
      tools:listitem="@layout/item_city"
      />


    <TextView
      android:id="@+id/tvNoCities"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center"
      android:layout_marginBottom="@dimen/_10sdp"
      android:fontFamily="@font/roboto_medium"
      android:text="@string/error_no_cities_added"
      android:textSize="24sp"
      android:visibility="gone"
      />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
      android:id="@+id/fabAddCity"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="bottom|end"
        android:layout_marginEnd="@dimen/_15sdp"
    android:layout_marginBottom="@dimen/_12sdp"
      android:text="@string/add_city"
      android:textAllCaps="false"
      android:textColor="@color/white"
      android:textSize="16sp"
      app:icon="@drawable/ic_add_24px"
      app:iconTint="@color/white"
      />

    <include
      android:id="@+id/layoutProgress"
      layout="@layout/layout_progress"
      />

  </FrameLayout>
</LinearLayout>